--- a/MDNtest/doc2.html
+++ b/MDNtest/doc2.html
@@ -17,11 +17,12 @@
     </ul>
  
     <h3 class="numbered">Numbered paragraphs</h3>
+    <div id="numbered">
     <p class="numbered">Lorem ipsum</p>
     <p class="numbered">Dolor sit</p>
     <p class="numbered">Amet consectetuer</p>
     <p class="numbered">Magna aliquam</p>
     <p class="numbered">Autem veleum</p>
- 
+    </div>
   </body>
 </html>
