--- a/MDNtest/doc2.html
+++ b/MDNtest/doc2.html
@@ -24,5 +24,6 @@
     <p class="numbered">Magna aliquam</p>
     <p class="numbered">Autem veleum</p>
     </div>
+    <img id="fixed-pin" src="Yellow-pin.png" alt="Yellow map pin">
   </body>
 </html>
